// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout and 3 podlets - run 1 - initial 1`] = `
"(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({\\"3b0887ddfac98bb9c42ae30bdc580452e2798324bd16572e4635a7098e2139be\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(1, 2);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"4b9e9445b702bbd28604d0c76f182392776d9f643d8da0a789d2f93fb22a8b99\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(10, 6);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"56b86ab1072571a4efb08c9e5645d7ad7b442043bc29370df7212d1e7743e6ae\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(5, 6);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"82dd5eababe4c7ae7aeaa58e74cf83badd9d6066b08e6e6c1eb7a2935cf11d79\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(3, 4);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\":[function(require,module,exports){
'use strict';

module.exports = function sum(a, b) {
    return a + b;
};

},{}]},{},[\\"4b9e9445b702bbd28604d0c76f182392776d9f643d8da0a789d2f93fb22a8b99\\",\\"3b0887ddfac98bb9c42ae30bdc580452e2798324bd16572e4635a7098e2139be\\",\\"82dd5eababe4c7ae7aeaa58e74cf83badd9d6066b08e6e6c1eb7a2935cf11d79\\",\\"56b86ab1072571a4efb08c9e5645d7ad7b442043bc29370df7212d1e7743e6ae\\"]);
"
`;

exports[`Layout and 3 podlets - run 1 - initial 2`] = `
".e-title {
    color: black;
}

body {
    margin: 0;
    padding: 0;
}

.a-title {
    color: blue;
}

body {
    margin: 0;
    padding: 0;
}

.b-title {
    color: red;
}

body {
    margin: 0;
    padding: 0;
}

.c-title {
    color: green;
}

"
`;

exports[`Layout and 3 podlets - run 2 - identical to run 1 1`] = `
"(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({\\"3b0887ddfac98bb9c42ae30bdc580452e2798324bd16572e4635a7098e2139be\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(1, 2);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"4b9e9445b702bbd28604d0c76f182392776d9f643d8da0a789d2f93fb22a8b99\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(10, 6);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"56b86ab1072571a4efb08c9e5645d7ad7b442043bc29370df7212d1e7743e6ae\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(5, 6);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"82dd5eababe4c7ae7aeaa58e74cf83badd9d6066b08e6e6c1eb7a2935cf11d79\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(3, 4);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\":[function(require,module,exports){
'use strict';

module.exports = function sum(a, b) {
    return a + b;
};

},{}]},{},[\\"4b9e9445b702bbd28604d0c76f182392776d9f643d8da0a789d2f93fb22a8b99\\",\\"3b0887ddfac98bb9c42ae30bdc580452e2798324bd16572e4635a7098e2139be\\",\\"82dd5eababe4c7ae7aeaa58e74cf83badd9d6066b08e6e6c1eb7a2935cf11d79\\",\\"56b86ab1072571a4efb08c9e5645d7ad7b442043bc29370df7212d1e7743e6ae\\"]);
"
`;

exports[`Layout and 3 podlets - run 2 - identical to run 1 2`] = `
".e-title {
    color: black;
}

body {
    margin: 0;
    padding: 0;
}

.a-title {
    color: blue;
}

body {
    margin: 0;
    padding: 0;
}

.b-title {
    color: red;
}

body {
    margin: 0;
    padding: 0;
}

.c-title {
    color: green;
}

"
`;

exports[`Layout and 3 podlets - run 3 - swapped bundling order 1`] = `
"(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({\\"3b0887ddfac98bb9c42ae30bdc580452e2798324bd16572e4635a7098e2139be\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(1, 2);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"4b9e9445b702bbd28604d0c76f182392776d9f643d8da0a789d2f93fb22a8b99\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(10, 6);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"56b86ab1072571a4efb08c9e5645d7ad7b442043bc29370df7212d1e7743e6ae\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(5, 6);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"82dd5eababe4c7ae7aeaa58e74cf83badd9d6066b08e6e6c1eb7a2935cf11d79\\":[function(require,module,exports){
'use strict';

const sum = require('./d');

sum(3, 4);

},{\\"./d\\":\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\"}],\\"a83a8f5a3f18d24f036db81d8660b46af30b75902500f405df28b8c368045add\\":[function(require,module,exports){
'use strict';

module.exports = function sum(a, b) {
    return a + b;
};

},{}]},{},[\\"4b9e9445b702bbd28604d0c76f182392776d9f643d8da0a789d2f93fb22a8b99\\",\\"82dd5eababe4c7ae7aeaa58e74cf83badd9d6066b08e6e6c1eb7a2935cf11d79\\",\\"56b86ab1072571a4efb08c9e5645d7ad7b442043bc29370df7212d1e7743e6ae\\",\\"3b0887ddfac98bb9c42ae30bdc580452e2798324bd16572e4635a7098e2139be\\"]);
"
`;

exports[`Layout and 3 podlets - run 3 - swapped bundling order 2`] = `
".e-title {
    color: black;
}

body {
    margin: 0;
    padding: 0;
}

.b-title {
    color: red;
}

body {
    margin: 0;
    padding: 0;
}

.c-title {
    color: green;
}

body {
    margin: 0;
    padding: 0;
}

.a-title {
    color: blue;
}

"
`;
